Fixed language popup on mobile and mirror list pt.2

--- a/static/custom.css
+++ b/static/custom.css
@@ -140,7 +140,7 @@ th {
     }
     
     .language-popup {
-        left: 100px;
+        left: 220px;
     }
 
     a.back-btn-sidebar {
